@@ -67,3 +67,8 @@ compileJava {
 compileTestJava {
     options.compilerArgs += ["--enable-preview"]
 }
+
+run {
+    jvmArgs += ["--enable-preview"]
+    mainClassName="ru.vk.itmo.test.smirnovandrew.Main"
+}
